--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -77,8 +77,8 @@
                   <input class="form-input datos" type="password" id="password2" name="password2" required=""
                     placeholder="Confirmar contraseña">
                 </div>
-                <div class="info">
-                  <div class="item">Información personal</div>
+                <div class="row_titulo">
+                  <div class="">Información personal</div>
                 </div>
                 <div class="form-group">
                   <input class="form-input datos" type="text" id="nombre" name="nombre" required="" placeholder="Nombre">
