--- a/public/css/style.css
+++ b/public/css/style.css
@@ -167,6 +167,32 @@ body {
   position: relative;
 }
 
+.header-form input{
+    width: 80%;
+    padding: 12px;
+    border: none;
+    border-radius: 5px;
+    font-family: 'Roboto', sans-serif;
+
+
+}
+.header-form input:focus{
+    outline-color: #1259c3;
+    
+}
+
+.header-form a{
+    text-decoration: none;
+    color: #666;
+}
+.header-form a i{
+    margin: 3px;
+    padding: 9px;
+    background-color: white;
+    border-radius: 5px;
+    position: absolute;
+    right: 1%;
+}
 .search-bar {
   width: 90%;
   padding: 0.75rem 1rem;
@@ -200,7 +226,7 @@ input:focus {
 }
 */
 .img-header {
-  width: 30%;
+  width: 25%;
   min-width: 100px;
   max-width: 200px;
 }
@@ -334,7 +360,7 @@ main {
     border-radius: 5px;
     box-sizing: border-box;
 }*/
-form {
+.account form {
   margin: auto;
   width: 500%;
   max-width: 500px;
