agregado de carrusel en home

--- a/src/views/partials/script.ejs
+++ b/src/views/partials/script.ejs
@@ -1,17 +1,66 @@
 <script>
-    function toggleUserMenu() {
-      document.getElementById('user-menu').classList.toggle('show');
-    }
+  const btnLeft = document.querySelector(".btn-left"),
+        btnRight = document.querySelector(".btn-right"),
+        slider = document.querySelector("#slider"),
+        sliderSection = document.querySelectorAll(".slider-section");
+  function toggleUserMenu() {
+    document.getElementById('user-menu').classList.toggle('show');
+  }
 
-    window.onclick = function (event) {
-      if (!event.target.matches('.fa-user')) {
-        var dropdowns = document.getElementsByClassName("user-menu");
-        for (var i = 0; i < dropdowns.length; i++) {
-          var openDropdown = dropdowns[i];
-          if (openDropdown.classList.contains('show')) {
-            openDropdown.classList.remove('show');
-          }
+  window.onclick = function (event) {
+    if (!event.target.matches('.fa-user')) {
+      var dropdowns = document.getElementsByClassName("user-menu");
+      for (var i = 0; i < dropdowns.length; i++) {
+        var openDropdown = dropdowns[i];
+        if (openDropdown.classList.contains('show')) {
+          openDropdown.classList.remove('show');
         }
       }
     }
-  </script>
+  }
+
+
+
+  btnLeft.addEventListener("click", e => moveToLeft())
+  btnRight.addEventListener("click", e => moveToRight())
+
+  setInterval(() => {
+    moveToRight()
+  }, 5000);
+
+
+  let operacion = 0,
+    counter = 0,
+    widthImg = 100 / sliderSection.length;
+
+  function moveToRight() {
+    if (counter >= sliderSection.length - 1) {
+      counter = 0;
+      operacion = 0;
+      slider.style.transform = `translate(-${operacion}%)`;
+      slider.style.transition = "none";
+      return;
+    }
+    counter++;
+    operacion = operacion + widthImg;
+    slider.style.transform = `translate(-${operacion}%)`;
+    slider.style.transition = "all ease .6s"
+
+  }
+
+  function moveToLeft() {
+    counter--;
+    if (counter < 0) {
+      counter = sliderSection.length - 1;
+      operacion = widthImg * (sliderSection.length - 1)
+      slider.style.transform = `translate(-${operacion}%)`;
+      slider.style.transition = "none";
+      return;
+    }
+    operacion = operacion - widthImg;
+    slider.style.transform = `translate(-${operacion}%)`;
+    slider.style.transition = "all ease .6s"
+
+
+  }   
+</script>
