--- a/public/css/style.css
+++ b/public/css/style.css
@@ -454,6 +454,99 @@ main {
   margin-top: 20px;
 }
 
+/*-------- carrusel ------*/
+/*
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+*/
+.carrusel-body {
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background: #363062;
+  background: linear-gradient(to right, #6f63c7, #363062);
+  padding: 20px; 
+  border-radius: 20px;
+}
+
+.container-carousel {
+  position: relative;
+  width: 500px;
+  height: calc(width);
+  background-color: #e0e0e0;
+  box-shadow: 0 8px 32px 0 rgba(0, 0, 0, 0.66);
+  border-radius: 15px;
+  overflow: hidden;
+  scroll-snap-type: x mandatory;
+
+}
+
+.product__carrusel {
+  max-width: 18rem;
+  border: 1px solid #000;
+  border-radius: 0.5rem;
+  overflow: hidden;
+  margin: 1rem;
+  background-color: #7e0101;
+  padding-top: 20px;
+}
+
+.carruseles {
+  width: 1000%;
+  height: 100%;
+  display: flex;
+
+}
+
+.slider-section {
+  width: calc(100% / 5);
+  height: 100%;
+  
+}
+
+.slider-section img {
+  width: 50%;
+  height: 50%;
+  object-fit: cover;
+  border-radius: 15px;
+  scroll-snap-align: center;
+}
+
+.btn-left,
+.btn-right {
+  display: flex;
+  position: absolute;
+  top: 50%;
+  font-size: 1.5rem;
+  background-color: transparent;
+  border-radius: 50%;
+  padding: 5px;
+  font-weight: 600;
+  cursor: pointer;
+  color: #8d030381;
+  transform: translate(0,-50%);
+  transition: .5s ease;
+  user-select: none;
+}
+
+.btn-left:hover,
+.btn-right:hover {
+  background-color: #333333d4;
+  color: #fff;
+}
+
+.btn-left {
+  left: 10px;
+}
+
+.btn-right {
+  right: 10px;
+}
+
 @media (min-width: 361px) {
 
   /*registro*/
