--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -1,98 +1,118 @@
 <!DOCTYPE html>
 <html lang="es-AR">
-  <%- include('./partials/head',{'titulo':datos.titulo}) %>
-  
-<body>
-  <header>
-    <div class="contenedor-header">
-      <div id="logo" class="logo-header img-header">
-        <img id="logo1" src="/images/PowerCore.svg" alt="PowerCore">
-        <img id="logo2" src="/images/PowerCore_large.svg" alt="PowerCore">
-      </div>
-      <div id="search" class="form-search">
-        <form class="header-form" action="#" method="GET">
-          <input class="search-bar" placeholder="Buscar productos, marcas y más" type="search">
-         <button class="search-bar-icon" type="submit"><i class="fa fa-search"></i></button>
-        </form>
-      </div>
-    </div>
-    <div class="contenedor-nav">
+<%- include('./partials/head',{'titulo':datos.titulo}) %>
 
-      <nav class="header-nav">
-        <ul class="nav-bar">
-          <li><a href="/">Inicio</a></li>
-          <li><a href="#">Productos</a></li>
-          <li><a href="#">Contacto</a></li>
-        </ul>
-        <ul class="nav-bar">
-          <li><a href="/users/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
-          <li><a href="/users/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
-          <li><a href="/products/cart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
-        </ul>
-      </nav>
-    </div>
-    <div class="mob__navbar">
-      <div class="nav-item home">
-        <a href="/">
-          <img class="img-nav" src="/images/PowerCore.svg" alt="">
-        </a>
+  <body>
+    <header>
+      <div class="contenedor-header">
+        <div id="logo" class="logo-header img-header">
+          <img id="logo1" src="/images/PowerCore.svg" alt="PowerCore">
+          <img id="logo2" src="/images/PowerCore_large.svg" alt="PowerCore">
+        </div>
+        <div id="search" class="form-search">
+          <form class="header-form" action="#" method="GET">
+            <input class="search-bar" placeholder="Buscar productos, marcas y más" type="search">
+            <button class="search-bar-icon" type="submit"><i class="fa fa-search"></i></button>
+          </form>
+        </div>
       </div>
-      <div class="nav-item">
-        <button class="search__mobile">
-          <i class="fa-solid fa-magnifying-glass"></i>
+      <div class="contenedor-nav">
 
-        </button>
+        <nav class="header-nav">
+          <ul class="nav-bar">
+            <li><a href="/">Inicio</a></li>
+            <li><a href="#">Productos</a></li>
+            <li><a href="#">Contacto</a></li>
+          </ul>
+          <ul class="nav-bar">
+            <li><a href="/users/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
+            <li><a href="/users/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
+            <li><a href="/products/cart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
+          </ul>
+        </nav>
       </div>
-      <div class="nav-item">
-        <a href="/products/cart"><i class="fa-solid fa-cart-shopping"></i>
-          <br>
-          Carrito</a>
-      </div>
-      <div class="nav-item">
-        <i class="fa-solid fa-bars"></i>
-        Menu
-      </div>
-    </div>
-    </div>
-  </header>
+      <div class="mob__navbar">
+        <div class="nav-item home">
+          <a href="/">
+            <img class="img-nav" src="/images/PowerCore.svg" alt="">
+          </a>
+        </div>
+        <div class="nav-item">
+          <button class="search__mobile">
+            <i class="fa-solid fa-magnifying-glass"></i>
 
-  <main>
-    <h1>PowerCore - Tienda Gamer Argentina</h1>
-    <p>Compra los productos para tu pc gamer en el sitio número uno de Argentina</p>
-    <section id="products__section">
-      <h2>Productos Destacados</h2>
-      <div class="card__wrapper">
-        <% for(let product of products){ %>
-          <div class="product__card">
-            <a href="/products/<%= product.productId %>"><img src="<%= product.image %>" alt="Producto 1"></a>
-            <div class="product__description">
-              <p class="product__cathegory"><%= product.category %></p>
-              <a href="/products/<%= product.productId %>">
-                <h3 class="product__name"><%= product.name %></h3>
-              </a>
-              <p class="product__price">$<%= product.price %></p>
-              <a href="/products/<%= product.productId %>"><i class="fas fa-info-circle"></i>Ver detalles</a>
-              <button class="btn btn-primary">Agregar al
-                <span>
-                  <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
-                </span>
-              </button>
+          </button>
+        </div>
+        <div class="nav-item">
+          <a href="/products/cart"><i class="fa-solid fa-cart-shopping"></i>
+            <br>
+            Carrito</a>
+        </div>
+        <div class="nav-item">
+          <i class="fa-solid fa-bars"></i>
+          Menu
+        </div>
+      </div>
+      </div>
+    </header>
+
+    <main>
+      <h1>PowerCore - Tienda Gamer Argentina</h1>
+      <p>Compra los productos para tu pc gamer en el sitio número uno de Argentina</p>
+      <section id="products__section">
+        <div class="carrusel-body">
+          <div class="container-carousel">
+            <div class="carruseles" id="slider">
+              <% for(let product of products){ %>
+                <section class="slider-section">
+                  
+                    <a href="/products/<%= product.productId %>"><img src="<%= product.image %>" alt="Producto 1"></a>
+
+                </section>
+                <% } %>
             </div>
+            <div class="btn-left"><i class='bx bx-chevron-left'></i></div>
+            <div class="btn-right"><i class='bx bx-chevron-right'></i></div>
           </div>
-        <% } %>
-
-
+        </div>
+        </div>
         
-        
-      </div>
-      </div>
-    </section>
-  </main>
+        <h2>Productos Destacados</h2>
+        <div class="card__wrapper">
+          <% for(let product of products){ %>
+            <div class="product__card">
+              <a href="/products/<%= product.productId %>"><img src="<%= product.image %>" alt="Producto 1"></a>
+              <div class="product__description">
+                <p class="product__cathegory">
+                  <%= product.category %>
+                </p>
+                <a href="/products/<%= product.productId %>">
+                  <h3 class="product__name">
+                    <%= product.name %>
+                  </h3>
+                </a>
+                <p class="product__price">$<%= product.price %>
+                </p>
+                <a href="/products/<%= product.productId %>"><i class="fas fa-info-circle"></i>Ver detalles</a>
+                <button class="btn btn-primary">Agregar al
+                  <span>
+                    <i class="fa-solid fa-cart-shopping" style="color: #ffffff;"></i>
+                  </span>
+                </button>
+              </div>
+            </div>
+            <% } %>
 
-  <%- include('./partials/footer',{'pie':datos.pie}) %>
-  <%- include('./partials/script') %>
 
-  
-</body>
+
+
+      </section>
+    </main>
+
+    <%- include('./partials/footer',{'pie':datos.pie}) %>
+      <%- include('./partials/script') %>
+
+
+  </body>
 
 </html>
