--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -66,7 +66,7 @@
               <% for(let promo of promos){ %>
                 <section class="slider-section">
                   
-                    <a href="#"><img src="<%= promo.image %>" alt="<%= promo.productId %>"></a>
+                    <a href="#"><img class="img-tamaño" src="<%= promo.image %>" alt="<%= promo.productId %>"></a>
 
                 </section>
                 <% } %>
