--- a/src/views/admin/registerProduct.ejs
+++ b/src/views/admin/registerProduct.ejs
@@ -2,9 +2,127 @@
 <html lang="en">
 <head>
     <%- include('../partials/head',{'titulo':datos.titulo}) %>
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+
 </head>
 <body>
-    aqui register admin
+    <header>
+        <div class="contenedor-header">
+          <div id="logo" class="logo-header img-header">
+            <img id="logo1" src="/images/PowerCore.svg" alt="PowerCore">
+            <img id="logo2" src="/images/PowerCore_large.svg" alt="PowerCore">
+          </div>
+          <div id="search" class="form-search">
+            <form class="header-form" action="#" method="GET">
+              <input class="search-bar" placeholder="Buscar productos, marcas y más" type="search">
+              <button class="search-bar-icon" type="submit"><i class="fa fa-search"></i></button>
+            </form>
+          </div>
+        </div>
+        <div class="contenedor-nav">
+  
+          <nav class="header-nav">
+            <ul class="nav-bar">
+              <li><a href="/">Inicio</a></li>
+              <li><a href="#">Productos</a></li>
+              <li><a href="#">Contacto</a></li>
+            </ul>
+            <ul class="nav-bar">
+              <li><a href="/users/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
+              <li><a href="/users/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
+              <li><a href="/products/cart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
+            </ul>
+          </nav>
+        </div>
+        <div class="mob__navbar">
+          <div class="nav-item home">
+            <a href="/">
+              <img class="img-nav" src="/images/PowerCore.svg" alt="">
+            </a>
+          </div>
+          <div class="nav-item">
+            <button class="search__mobile">
+              <i class="fa-solid fa-magnifying-glass"></i>
+  
+            </button>
+          </div>
+          <div class="nav-item">
+            <a href="/products/cart"><i class="fa-solid fa-cart-shopping"></i>
+              <br>
+              Carrito</a>
+          </div>
+          <div class="nav-item">
+            <i class="fa-solid fa-bars"></i>
+            Menu
+          </div>
+        </div>
+      </header>
+    <section class="content">
+        <div class="container-fluid">
+            <div class="row" style="display: flex; justify-content: center;">
+                <!-- left column -->
+                <div class="col-md-6">
+                    <!-- general form elements -->
+                    <div class="card card-primary">
+                        <div class="card-header">
+                            <h3 class="card-title">Crear Producto Nuevo</h3>
+                        </div>
+                        <!-- /.card-header -->
+                        <!-- form start -->
+                        <form>
+                            <div class="card-body">
+                                <div class="form-group">
+                                    <label for="name">Nombre</label>
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="name">Descripción</label>
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="name">Precio</label>
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="name">Código del Producto</label>
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="name">Imagen</label>
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="name">Precio General</label>
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="name">Precio  de Contado</label>
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
+                                </div>
+                                <div class="form-group">
+                                    <label for="name">Precio de MercadoPago</label>
+                                    <input type="text" class="form-control" id="name" name="name" placeholder="Enter name">
+                                </div>
+                                <div class="form-group">
+                                    <select class="form-control" name="cateogria">
+                                        <option>Laptops</option>
+                                        <option>Accessories</option>
+                                        <option>Desktops</option>
+                                        <option>Gamers</option>
+                                        <option>Extras</option>
+                                    </select>
+                                </div>
+                            </div>
+                            <!-- /.card-body -->
+                            <div class="card-footer">
+                                <button type="submit" class="btn btn-primary">Crear Producto</button>
+                            </div>
+                        </form>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
 
     <%- include('../partials/footer',{'pie':datos.pie}) %>
     <%- include('../partials/script') %>
