activo solo dos menues para el admin, temporal

--- a/src/views/index.ejs
+++ b/src/views/index.ejs
@@ -28,6 +28,8 @@
             <li><a href="/users/register">Registrarse <i class="fa-regular fa-id-card"></i></a></li>
             <li><a href="/users/login">Ingresar <i class="fas fa-user" onclick="toggleUserMenu()"></i></a></li>
             <li><a href="/products/cart">Ver Pedidos <i class="fas fa-shopping-cart"></i></a></li>
+            <li><a href="/admin/edit">Editar productos(ADMIN) <i class="fas fa-edit"></i></a></li>
+            <li><a href="/admin/register">Crear productos(ADMIN) <i class="fas fa-plus-circle"></i></a></li>
           </ul>
         </nav>
       </div>
