--- a/src/views/admin/editProduct.ejs
+++ b/src/views/admin/editProduct.ejs
@@ -3,6 +3,7 @@
 <head>
     <%- include('../partials/head',{'titulo':datos.titulo}) %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
 </head>
 <body>
@@ -69,7 +70,7 @@
                         </div>
                         <!-- /.card-header -->
                         <!-- form start -->
-                        <form>
+                        <form action="/admin/edit" method="post" id="form-editar">
                             <div class="card-body">
                                 <div class="form-group">
                                     <label for="name">Nombre</label>
@@ -126,5 +127,28 @@
 
     <%- include('../partials/footer',{'pie':datos.pie}) %>
     <%- include('../partials/script') %>
+    <script>
+        // Seleccionar el formulario
+        const form = document.getElementById('form-editar');
+
+        form.addEventListener('submit', function(event) {
+            event.preventDefault(); // Evitar el envío del formulario
+
+            Swal.fire({
+                title: '¿Estás seguro?',
+                text: "No podrás revertir esto!",
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Sí, enviar!'
+            }).then((result) => {
+                if (result.isConfirmed) {
+                    // Enviar el formulario si el usuario confirma
+                    form.submit();
+                }
+            });
+        });
+    </script>
 </body>
 </html>
