--- a/src/views/contact.ejs
+++ b/src/views/contact.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <%- include('../partials/head',{'titulo':datos.titulo}) %>
+    <%- include('./partials/head',{'titulo':datos.titulo}) %>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
 
 </head>
@@ -49,7 +49,7 @@
           <div class="nav-item">
             <a href="/products/cart"><i class="fa-solid fa-cart-shopping"></i>
               <br>
-              Carrito</a>
+              Contacto</a>
           </div>
           <div class="nav-item">
             <i class="fa-solid fa-bars"></i>
@@ -124,7 +124,7 @@
         </div>
     </section>
 
-    <%- include('../partials/footer',{'pie':datos.pie}) %>
-    <%- include('../partials/script') %>
+    <%- include('./partials/footer',{'pie':datos.pie}) %>
+    <%- include('./partials/script') %>
 </body>
 </html>
